opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/variantslib"
bug-reports: "https://github.com/janestreet/variantslib/issues"
dev-repo: "https://github.com/janestreet/variantslib.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build-package" "variantslib" "-j" jobs]
]
depends: [
  "base"
  "jbuilder"
  "ppx_driver"
]
available: [ ocaml-version >= "4.03.0" ]
descr: "
Part of Jane Street's Core library

The Core suite of libraries is an industrial strength alternative to
OCaml's standard library that was developed by Jane Street, the
largest industrial user of OCaml.
"
